fix: gap between tabs in moile version

--- a/coffee-house/src/styles/menu.module.scss
+++ b/coffee-house/src/styles/menu.module.scss
@@ -177,5 +177,9 @@
       font-size: 32px;
       line-height: 40px;
     }
+
+    &__tabs {
+      gap: 8px;
+    }
   }
 }
